# 360-stitcher

./: .gitignore  CMakeLists.txt  README.md
apps/: detect_test_main.cpp  image_stitch_test_main.cpp  main.cpp
assets/yamls/: camera_1_intrin_undistort.yaml  camera_2_homography.yaml  camera_2_intrin_undistort.yaml  camera_3_homography.yaml  camera_4_homography.yaml  camera_4_intrin_undistort.yaml  camera_5_homography.yaml  car_rect.yaml  config.yaml  ground.yaml
include/: CameraSender.h  Config.h  EcalImageSender.h  GstReceiver.h  Intersector.h  PanoMain.h  Undistorter.h  airview_stitcher.h  airview_stitcher_utils.h  blend.h  cylinder_stitcher.cuh  cylinder_stitcher.h  helper_cuda.h  helper_string.h  innoreal_timer.hpp  project_to_cylinder.cuh  render.cuh  yolo.h  yolo_detect.h
include/common/: cylinder_stitcher.cuh
include/core/: airview_stitcher.h  airview_stitcher_utils.h  pano_main.h
include/stage/: blend_kernel.h  camera_sender.h  ecal_image_sender.h  gst_receiver.h  model.h  preprocess.h  render.cuh  types.h  undistorter.h  utils.h  yolo.h  yolo_detect.h  yolov5trt_det.h
include/util/: Intersector.h  config.h  helper_cuda.h  innoreal_timer.h
include/yolo/: calibrator.h  config.h  postprocess.h  yolo_detect.h  yolov5trt_det.h
parameters/yamls/: camera_0_homography.yaml  camera_0_intrin.yaml  camera_0_intrin_undistort.yaml  camera_10_homography.yaml  camera_1_homography.yaml  camera_1_intrin.yaml  camera_1_intrin_undistort.yaml  camera_2_homography.yaml  camera_2_intrin.yaml  camera_2_intrin_undistort.yaml  camera_3_homography.yaml  camera_3_intrin.yaml  camera_3_intrin_undistort.yaml  camera_4_homography.yaml  camera_4_intrin.yaml  camera_4_intrin_undistort.yaml  camera_5_homography.yaml  camera_5_intrin.yaml  camera_5_intrin_undistort.yaml  camera_6_homography.yaml  car_rect.yaml  config.yaml
parameters/yamls2/: ar_vis_config.yaml  camera_0_homography.yaml  camera_0_intrin_undistort.yaml  camera_1_homography.yaml  camera_3_intrin_undistort.yaml  camera_5_intrin_undistort.yaml  car_rect.yaml  config.yaml
parameters/yamls_0331_bak_1080/: camera_1_homography.yaml  camera_2_homography.yaml  camera_6_homography.yaml  car_rect.yaml
parameters/yamls_0424_bak/: camera_0_homography.yaml  camera_0_intrin.yaml  camera_1_intrin_undistort.yaml  camera_2_homography.yaml  camera_2_intrin.yaml  camera_4_homography.yaml  camera_4_intrin_undistort.yaml  camera_5_homography.yaml  camera_6_homography.yaml  camera_6_intrin_undistort.yaml
parameters/yamls_0715_bak/: camera_0_intrin_undistort.yaml  camera_1_homography.yaml  camera_1_intrin.yaml  camera_2_intrin_undistort.yaml  camera_4_homography.yaml  camera_4_intrin.yaml  camera_5_homography.yaml  camera_5_intrin.yaml  camera_5_intrin_undistort.yaml  camera_6_intrin.yaml
parameters/yamls_0720_bak/: camera_0_homography.yaml  camera_0_intrin.yaml  camera_0_intrin_undistort.yaml  camera_1_homography.yaml  camera_1_intrin_undistort.yaml  camera_2_homography.yaml  camera_2_intrin_undistort.yaml  camera_3_homography.yaml  camera_3_intrin_undistort.yaml  camera_6_homography.yaml  camera_6_intrin_undistort.yaml  camera_7_homography.yaml  camera_7_intrin_undistort.yaml  car_rect.yaml
parameters/yamls_1080_2160_bak/: camera_0_homography.yaml  camera_10_intrin.yaml  camera_3_homography.yaml  camera_5_intrin.yaml  camera_5_intrin_undistort.yaml  camera_6_intrin.yaml  camera_7_homography.yaml  camera_8_intrin_undistort.yaml  camera_9_intrin_undistort.yaml
parameters/yamls_720_1080_bak/: camera_0_homography.yaml  camera_1_homography.yaml  camera_2_homography.yaml  camera_3_intrin.yaml  camera_7_homography.yaml  camera_7_intrin.yaml  car_rect.yaml
parameters/yamls_720_2160_bak/: camera_0_homography.yaml  camera_10_intrin_undistort.yaml  camera_1_homography.yaml  camera_1_intrin.yaml  camera_2_homography.yaml  camera_2_intrin.yaml  camera_3_homography.yaml  camera_4_intrin.yaml  camera_4_intrin_undistort.yaml  camera_6_homography.yaml  camera_7_homography.yaml  camera_8_intrin.yaml  camera_9_intrin.yaml
plugin/: yololayer.cu  yololayer.h
src/: CameraSender.cpp  CameraSender.h  Config.cpp  EcalImageSender.cpp  GstReceiver.cpp  Intersector.cpp  PanoMain.cpp  Undistorter.cpp  airview_stitcher.cpp  airview_stitcher_kernel.cu  blend_kernel.cu  cylinder_stitcher.cpp  cylinder_stitcher.cu  detect_test_main.cpp  image_stitch_test_main.cpp  main.cpp  project_to_cylinder.cu  render.cu  yolo.cpp  yolo_detect.cpp
src/core/: airview_stitcher.cpp  airview_stitcher_kernel.cu  pano_main.cpp
src/stage/: blend_kernel.cu  calibrator.cpp  camera_sender.cpp  ecal_image_sender.cpp  gst_receiver.cpp  model.cpp  postprocess.cpp  preprocess.cu  render.cu  undistorter.cpp  yolo.cpp  yolo_detect.cpp  yolov5trt_det.cpp
src/util/: config.cpp
src/yolo/: calibrator.cpp  model.cpp  postprocess.cpp  preprocess.cu  yolo.cpp  yolo_detect.cpp  yolov5trt_det.cpp
